# yml-diff

./: Cargo.toml  config.properties  config_v1.yml  config_v2.yml  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
