[package]
name = "yml-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
colored = "3.0"

[[bin]]
name = "yml-diff"
path = "src/main.rs"

# 优化编译配置
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 优化构建配置
[build]
rustflags = ["-C", "target-cpu=native"]

# 跨平台编译配置
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"